--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images/Bhagyasree photo.jpg" alt="Bhagyasree's profile picture" width="150" height="200">
+  <img src="Bhagyasree photo.jpg" alt="Bhagyasree's profile picture" width="150" height="200">
   <h1>Bhagyasree Biju</h1>
   <p> Student At <a href="https://vit.ac.in/"><em>VIT University,Vellore</em></a></p>
   <p>Hello! I'm currently a student at VIT,Vellore doing my Btech in Computer Science and Engineering
