--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Hello! I'm currently a student at VIT,Vellore doing my Btech in Computer Science and Engineering
     with specialisation in Bioinformatics.This is a page I've created using html as a part of my web development journey.
     I've just completed my second year right now and very enthusiastic about becoming a full stack web developer!</p>
-  <h4><a href="Contact info.html">Contact Me</a></h4>
+  <h4><a href="contact info.html">Contact Me</a></h4>
   <hr size="2" noshade />
   <h3>Education</h3>
   <ul>
@@ -90,7 +90,7 @@
   </td>
 </table>
   <hr size="2" noshade>
-  <h4><a href="Queries.html">Ask your queries here(Click this link)</a></h4>
+  <h4><a href="queries.html">Ask your queries here(Click this link)</a></h4>
   <hr size="2"noshade />
 </body>
 
